package app.entities;

public enum RoleType {
    USER, ADMIN
}
